<resources>
    <string name="app_name">StudentHelper</string>
    <string name="login_title">Вхід</string>
    <string name="login_text">Логін</string>
    <string name="password">Пароль</string>
    <string name="log_btn_text">Ввійти</string>
    <string name="open_reg_text">Зареєструватись</string>
    <string name="google">Google</string>
    <string name="registration_title_text">Реєстація</string>
    <string name="btn_registration_text">Зареєструватись</string>
    <string name="Text">test_text</string>
    <string name="rozklad">Розклад</string>
    <string name="exit">Вихід</string>
    <string name="testing">Тестування</string>
    <string name="teachers">Викладачі</string>
    <string name="setting">Налаштування</string>
    <string name="visited">Відвідування</string>
    <string name="my_lectures">Мої лекції</string>
    <string name="test_manager">Тест менеджер</string>
    <string name="save_changed">Зберегти зміни</string>
    <string name="audytoriya">Аудиторія</string>
    <string name="date_p">Дата проведення</string>
    <string name="open_close">Відкрити/Закрити</string>
    <string name="result_test">Результати</string>
    <string name="ans">Відповісти</string>
    <string name="progress_example">10/15</string>
    <string name="zero">0</string>
    <string name="ivanov_i_i">Ivanov I. I.</string>
    <string name="_4_4">4/4</string>
</resources>
