<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuRozklad"
        android:title="@string/rozklad"
        android:icon="@drawable/format_align_justify"
        app:showAsAction="always"
        />
    <group
        android:id="@+id/menuStudentGroup"
        android:visible="false">
        <item
            android:id="@+id/menuTesting"
            android:title="@string/testing"
            android:icon="@drawable/learn"
            />
    </group>
    <item
        android:id="@+id/menuTeachers"
        android:title="@string/teachers"
        android:icon="@drawable/account_multiple_check"
        />

    <group
        android:id="@+id/menuTeacherGroup"
        android:visible="false">
        <item
            android:id="@+id/menuVisited"
            android:title="@string/visited"
            android:icon="@drawable/alpha_h_box"/>
        <item
            android:id="@+id/menuMyLecture"
            android:title="@string/my_lectures"
            android:icon="@drawable/lead_pencil"
            />
        <item
            android:id="@+id/menuTestingManager"
            android:title="@string/test_manager"
            android:icon="@drawable/format_list_checkbox"/>
    </group>


    <item
        android:id="@+id/menuExit"
        android:title="@string/exit"
        android:icon="@drawable/exit_run"
        />
</menu>
