<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tv_visited_para_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:text="@string/app_name"
        android:layout_margin="10dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tiDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/apcEt_date_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/date_p" />

    </android.support.design.widget.TextInputLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_list_students"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" />
            <Button
                android:id="@+id/btn_save_visited"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/colorPrimary"
                android:padding="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/save_changed"
                android:textAlignment="center"
                android:textColor="@color/colorWhite_"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>