<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ViewSwitcher
        android:id="@+id/view_switcher_test"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">
            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/progress_example"/>
            <TextView
                android:id="@+id/tv_text_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/app_name"
                android:textSize="18sp"
                android:padding="15dp"/>

            <RadioGroup
                android:id="@+id/rg_answers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="30dp"
                android:paddingEnd="10dp">
                <RadioButton
                    android:id="@+id/rb_answer_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:layout_margin="2dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="5dp"
                    android:background="@color/LightGray_"
                    android:text="@string/app_name"/>
                <RadioButton
                    android:id="@+id/rb_answer_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="20dp"
                    android:layout_margin="2dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="5dp"
                    android:background="@color/LightGray_"
                    android:text="@string/app_name"/>
                <RadioButton
                    android:id="@+id/rb_answer_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="20dp"
                    android:layout_margin="2dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="5dp"
                    android:background="@color/LightGray_"
                    android:text="@string/app_name"/>
                <RadioButton
                    android:id="@+id/rb_answer_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="5dp"
                    android:padding="20dp"
                    android:layout_margin="2dp"
                    android:background="@color/LightGray_"
                    android:text="@string/app_name"/>
            </RadioGroup>
            <Button
                android:id="@+id/btn_next_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/colorPrimary"
                android:padding="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/ans"
                android:textAlignment="center"
                android:textColor="@color/colorWhite_"
                android:textSize="20sp" />
        </LinearLayout>


    </ViewSwitcher>

</LinearLayout>